BUG killed: forgot to save the results into dsig variable

--- a/tst/CMakeLists.txt
+++ b/tst/CMakeLists.txt
@@ -52,15 +52,15 @@ ENDIF(SUPERLUD_FOUND)
 
 # SERIAL + LAPACK
 IF(BLITZ_FOUND AND LAPACK_FOUND)
-	ADD_EXECUTABLE        (ttruss01 ttruss01.cpp)
-	TARGET_LINK_LIBRARIES (ttruss01 ${SERIAL_LIBS} ${LAPACK_LIBRARIES})
-	SET_TARGET_PROPERTIES (ttruss01 PROPERTIES COMPILE_FLAGS "${SERIAL_FLAGS}")
+	#ADD_EXECUTABLE        (ttruss01 ttruss01.cpp)
+	#TARGET_LINK_LIBRARIES (ttruss01 ${SERIAL_LIBS} ${LAPACK_LIBRARIES})
+	#SET_TARGET_PROPERTIES (ttruss01 PROPERTIES COMPILE_FLAGS "${SERIAL_FLAGS}")
 	ADD_EXECUTABLE        (ttri6    ttri6.cpp)
 	TARGET_LINK_LIBRARIES (ttri6    ${SERIAL_LIBS} ${LAPACK_LIBRARIES})
 	SET_TARGET_PROPERTIES (ttri6    PROPERTIES COMPILE_FLAGS "${SERIAL_FLAGS}")
-	ADD_EXECUTABLE        (tsolid01 tsolid01.cpp)
-	TARGET_LINK_LIBRARIES (tsolid01 ${SERIAL_LIBS} ${LAPACK_LIBRARIES})
-	SET_TARGET_PROPERTIES (tsolid01 PROPERTIES COMPILE_FLAGS "${SERIAL_FLAGS}")
+	#ADD_EXECUTABLE        (tsolid01 tsolid01.cpp)
+	#TARGET_LINK_LIBRARIES (tsolid01 ${SERIAL_LIBS} ${LAPACK_LIBRARIES})
+	#SET_TARGET_PROPERTIES (tsolid01 PROPERTIES COMPILE_FLAGS "${SERIAL_FLAGS}")
 	#ADD_EXECUTABLE        (tplate01 tplate01.cpp)
 	#TARGET_LINK_LIBRARIES (tplate01 ${SERIAL_LIBS} ${LAPACK_LIBRARIES})
 	#SET_TARGET_PROPERTIES (tplate01 PROPERTIES COMPILE_FLAGS "${SERIAL_FLAGS}")
