BUG: Quadri8::Shape: NNODEr => NNODES; (tquadri added -- not working)

--- a/tst/CMakeLists.txt
+++ b/tst/CMakeLists.txt
@@ -58,6 +58,9 @@ IF(BLITZ_FOUND AND LAPACK_FOUND)
 	ADD_EXECUTABLE        (ttri6    ttri6.cpp)
 	TARGET_LINK_LIBRARIES (ttri6    ${SERIAL_LIBS} ${LAPACK_LIBRARIES})
 	SET_TARGET_PROPERTIES (ttri6    PROPERTIES COMPILE_FLAGS "${SERIAL_FLAGS}")
+	ADD_EXECUTABLE        (tquadri8 tquadri8.cpp)
+	TARGET_LINK_LIBRARIES (tquadri8 ${SERIAL_LIBS} ${LAPACK_LIBRARIES})
+	SET_TARGET_PROPERTIES (tquadri8 PROPERTIES COMPILE_FLAGS "${SERIAL_FLAGS}")
 	ADD_EXECUTABLE        (tsolid01 tsolid01.cpp)
 	TARGET_LINK_LIBRARIES (tsolid01 ${SERIAL_LIBS} ${LAPACK_LIBRARIES})
 	SET_TARGET_PROPERTIES (tsolid01 PROPERTIES COMPILE_FLAGS "${SERIAL_FLAGS}")
