Quad4: Quadrilateral element with 4 nodes and 9 IPs added (not verified yet)

--- a/tst/CMakeLists.txt
+++ b/tst/CMakeLists.txt
@@ -58,6 +58,9 @@ IF(BLITZ_FOUND AND LAPACK_FOUND)
 	ADD_EXECUTABLE        (ttri6    ttri6.cpp)
 	TARGET_LINK_LIBRARIES (ttri6    ${SERIAL_LIBS} ${LAPACK_LIBRARIES})
 	SET_TARGET_PROPERTIES (ttri6    PROPERTIES COMPILE_FLAGS "${SERIAL_FLAGS}")
+	ADD_EXECUTABLE        (tquad4   tquad4.cpp)
+	TARGET_LINK_LIBRARIES (tquad4   ${SERIAL_LIBS} ${LAPACK_LIBRARIES})
+	SET_TARGET_PROPERTIES (tquad4   PROPERTIES COMPILE_FLAGS "${SERIAL_FLAGS}")
 	ADD_EXECUTABLE        (tquad8 tquad8.cpp)
 	TARGET_LINK_LIBRARIES (tquad8 ${SERIAL_LIBS} ${LAPACK_LIBRARIES})
 	SET_TARGET_PROPERTIES (tquad8 PROPERTIES COMPILE_FLAGS "${SERIAL_FLAGS}")
