--- a/tst/CMakeLists.txt
+++ b/tst/CMakeLists.txt
@@ -70,6 +70,9 @@ IF(BLITZ_FOUND AND LAPACK_FOUND)
 	ADD_EXECUTABLE        (tsolid01   tsolid01.cpp)
 	TARGET_LINK_LIBRARIES (tsolid01   ${SERIAL_LIBS} ${LAPACK_LIBRARIES})
 	SET_TARGET_PROPERTIES (tsolid01   PROPERTIES COMPILE_FLAGS "${SERIAL_FLAGS}")
+	ADD_EXECUTABLE        (tmesh01    tmesh01.cpp)
+	TARGET_LINK_LIBRARIES (tmesh01    ${SERIAL_LIBS} ${LAPACK_LIBRARIES})
+	SET_TARGET_PROPERTIES (tmesh01    PROPERTIES COMPILE_FLAGS "${SERIAL_FLAGS}")
 	#ADD_EXECUTABLE        (tplate01 tplate01.cpp)
 	#TARGET_LINK_LIBRARIES (tplate01 ${SERIAL_LIBS} ${LAPACK_LIBRARIES})
 	#SET_TARGET_PROPERTIES (tplate01 PROPERTIES COMPILE_FLAGS "${SERIAL_FLAGS}")
