Mesh::Structured improved (multi-block verified, but duplicates are still present)\n New test (tmesh02) added

--- a/tst/CMakeLists.txt
+++ b/tst/CMakeLists.txt
@@ -73,6 +73,9 @@ IF(BLITZ_FOUND AND LAPACK_FOUND)
 	ADD_EXECUTABLE        (tmesh01    tmesh01.cpp)
 	TARGET_LINK_LIBRARIES (tmesh01    ${SERIAL_LIBS} ${LAPACK_LIBRARIES})
 	SET_TARGET_PROPERTIES (tmesh01    PROPERTIES COMPILE_FLAGS "${SERIAL_FLAGS}")
+	ADD_EXECUTABLE        (tmesh02    tmesh02.cpp)
+	TARGET_LINK_LIBRARIES (tmesh02    ${SERIAL_LIBS} ${LAPACK_LIBRARIES})
+	SET_TARGET_PROPERTIES (tmesh02    PROPERTIES COMPILE_FLAGS "${SERIAL_FLAGS}")
 	#ADD_EXECUTABLE        (tplate01 tplate01.cpp)
 	#TARGET_LINK_LIBRARIES (tplate01 ${SERIAL_LIBS} ${LAPACK_LIBRARIES})
 	#SET_TARGET_PROPERTIES (tplate01 PROPERTIES COMPILE_FLAGS "${SERIAL_FLAGS}")
