Added: SetNodeBrys and SetFaceBrys to data.h. WriteVTK in data.h organized a little bit. Added new test tpstrain02

--- a/tst/CMakeLists.txt
+++ b/tst/CMakeLists.txt
@@ -67,6 +67,9 @@ IF(BLITZ_FOUND AND LAPACK_FOUND)
 	ADD_EXECUTABLE        (tpstrain01 tpstrain01.cpp)
 	TARGET_LINK_LIBRARIES (tpstrain01 ${SERIAL_LIBS} ${LAPACK_LIBRARIES})
 	SET_TARGET_PROPERTIES (tpstrain01 PROPERTIES COMPILE_FLAGS "${SERIAL_FLAGS}")
+	ADD_EXECUTABLE        (tpstrain02 tpstrain02.cpp)
+	TARGET_LINK_LIBRARIES (tpstrain02 ${SERIAL_LIBS} ${LAPACK_LIBRARIES})
+	SET_TARGET_PROPERTIES (tpstrain02 PROPERTIES COMPILE_FLAGS "${SERIAL_FLAGS}")
 	ADD_EXECUTABLE        (tsolid01   tsolid01.cpp)
 	TARGET_LINK_LIBRARIES (tsolid01   ${SERIAL_LIBS} ${LAPACK_LIBRARIES})
 	SET_TARGET_PROPERTIES (tsolid01   PROPERTIES COMPILE_FLAGS "${SERIAL_FLAGS}")
