Util::Tree added

--- a/tst/CMakeLists.txt
+++ b/tst/CMakeLists.txt
@@ -24,6 +24,7 @@ INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindUMFPACK.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindSUPERLU.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindSUPERLUD.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindMPICXX.cmake)
+INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindIGRAPH.cmake)
 
 ENABLE_LANGUAGE(Fortran)
 INCLUDE(FindLAPACK)
@@ -131,3 +132,9 @@ IF(CMAKE_THREAD_LIBS_INIT AND BLITZ_FOUND AND GOTOBLAS_FOUND AND MPICXX_FOUND)
 	#SET_TARGET_PROPERTIES (ttruss02_GO PROPERTIES COMPILE_FLAGS "${PARALLEL_FLAGS}")
 	#SET_TARGET_PROPERTIES (ttruss04_GO PROPERTIES COMPILE_FLAGS "${PARALLEL_FLAGS}")
 ENDIF(CMAKE_THREAD_LIBS_INIT AND BLITZ_FOUND AND GOTOBLAS_FOUND AND MPICXX_FOUND)
+
+IF(IGRAPH_FOUND)
+	INCLUDE_DIRECTORIES   (${IGRAPH_INCLUDE_DIRS})
+	ADD_EXECUTABLE        (ttree01 ttree01.cpp)
+	TARGET_LINK_LIBRARIES (ttree01 ${IGRAPH_LIBRARIES})
+ENDIF(IGRAPH_FOUND)
