Mesh::Unstructured improved (working without Tags). Element::Bry with vararg re-added

--- a/tst/CMakeLists.txt
+++ b/tst/CMakeLists.txt
@@ -29,9 +29,9 @@ INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindIGRAPH.cmake)
 ENABLE_LANGUAGE(Fortran)
 INCLUDE(FindLAPACK)
 
-SET(SERIAL_LIBS    "")
+SET(SERIAL_LIBS    "jrs_triangle")
 SET(SERIAL_FLAGS   "-DDO_DEBUG")
-SET(PARALLEL_LIBS  "")
+SET(PARALLEL_LIBS  "jrs_triangle")
 SET(PARALLEL_FLAGS "-DDO_DEBUG")
 
 IF(Boost_FOUND)
