--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@
 PROJECT (MECHSYS)
 
 CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
+ENABLE_TESTING         ()
 
 OPTION(MAKE_VERBOSE       "Show additional messages during compilation/link?" OFF)
 OPTION(MAKE_ALL_WARNINGS  "Make with all warnings (-Wall)"                    ON )
@@ -45,4 +46,66 @@ ADD_DEFINITIONS(-fmessage-length=0) # Each error message will appear on a single
 
 INCLUDE_DIRECTORIES(${MECHSYS_SOURCE_DIR}/lib/)
 
-SUBDIRS (lib tst)
+SUBDIRS (lib tst src)
+
+# Dependencies
+SET(Boost_USE_STATIC_LIBS ON)
+INCLUDE(FindPythonLibs)
+INCLUDE(FindBoost)
+INCLUDE(FindThreads)
+INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindUseBLITZ.cmake)
+INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindGOTOBLAS.cmake)
+INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindUMFPACK.cmake)
+INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindSUPERLU.cmake)
+INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindSUPERLUD.cmake)
+INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindMPICXX.cmake)
+INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindIGRAPH.cmake)
+
+SET(FLAGS "-DDO_DEBUG")
+SET(LIBS  "jrs_triangle")
+
+IF(PYTHONLIBS_FOUND)
+	INCLUDE_DIRECTORIES   (${PYTHON_INCLUDE_PATH})
+	GET_FILENAME_COMPONENT(PYTHON_LIB_INSTALL ${PYTHON_LIBRARY} PATH)
+	GET_FILENAME_COMPONENT(PYTHON_SITE_PACKAGES ${PYTHON_LIB_INSTALL}/../site-packages ABSOLUTE)
+ENDIF(PYTHONLIBS_FOUND)
+
+IF(Boost_FOUND)
+	INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
+	SET(FLAGS "${FLAGS} -DUSE_BOOST")
+ENDIF(Boost_FOUND)
+
+SET(LINALG_FOUND FALSE)
+IF(GOTOBLAS_FOUND)
+	SET(LIBS  ${LIBS}  ${GOTOBLAS_LIBRARIES})
+	SET(LINALG_FOUND TRUE)
+ELSE(GOTOBLAS_FOUND)
+	ENABLE_LANGUAGE(Fortran)
+	INCLUDE(FindLAPACK)
+	IF(LAPACK_FOUND)
+		SET(LIBS  ${LIBS}  ${LAPACK_LIBRARIES})
+		SET(LINALG_FOUND TRUE)
+	ENDIF(LAPACK_FOUND)
+ENDIF(GOTOBLAS_FOUND)
+
+IF(UMFPACK_FOUND)
+	INCLUDE_DIRECTORIES(${UMFPACK_INCLUDE_DIRS})
+	SET(FLAGS "${FLAGS} -DHAVE_UMFPACK")
+	SET(LIBS   ${LIBS} ${UMFPACK_LIBRARIES})
+ENDIF(UMFPACK_FOUND)
+
+IF(SUPERLU_FOUND)
+	INCLUDE_DIRECTORIES(${SUPERLU_INCLUDE_DIRS})
+	SET(FLAGS "${FLAGS} -DHAVE_SUPERLU")
+	SET(LIBS   ${LIBS} ${SUPERLU_LIBRARIES})
+ENDIF(SUPERLU_FOUND)
+
+IF(SUPERLUD_FOUND)
+	INCLUDE_DIRECTORIES(${SUPERLUD_INCLUDE_DIRS})
+	SET(FLAGS "${FLAGS} -DHAVE_SUPERLUD")
+	SET(LIBS   ${LIBS} ${SUPERLUD_LIBRARIES})
+ENDIF(SUPERLUD_FOUND)
+
+IF(IGRAPH_FOUND)
+	SET(LIBS  ${LIBS}  ${IGRAPH_LIBRARIES})
+ENDIF(IGRAPH_FOUND)
