In MacOSX, libmechsys.dynlib has to be linked to Python libraries as well.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,7 @@ IF(PYTHONLIBS_FOUND)
 	INCLUDE_DIRECTORIES   (${PYTHON_INCLUDE_PATH})
 	GET_FILENAME_COMPONENT(PYTHON_LIB_INSTALL ${PYTHON_LIBRARY} PATH)
 	GET_FILENAME_COMPONENT(PYTHON_SITE_PACKAGES ${PYTHON_LIB_INSTALL}/../site-packages ABSOLUTE)
+	SET(LIBS ${LIBS} ${PYTHON_LIBRARIES})
 ENDIF(PYTHONLIBS_FOUND)
 
 IF(Boost_FOUND)
