CMake site-packages discovery function was not working for Mac OS X. Also, mechsys.dylib has to be renamed to mechsys.so in Mac OS X in order to be imported in python

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,8 +66,7 @@ SET(LIBS  "jrs_triangle")
 
 IF(PYTHONLIBS_FOUND)
 	INCLUDE_DIRECTORIES   (${PYTHON_INCLUDE_PATH})
-	GET_FILENAME_COMPONENT(PYTHON_LIB_INSTALL ${PYTHON_LIBRARY} PATH)
-	GET_FILENAME_COMPONENT(PYTHON_SITE_PACKAGES ${PYTHON_LIB_INSTALL}/../site-packages ABSOLUTE)
+	EXECUTE_PROCESS (COMMAND python -c "from distutils.sysconfig import get_python_lib; print get_python_lib()" OUTPUT_VARIABLE PYTHON_SITE_PACKAGES OUTPUT_STRIP_TRAILING_WHITESPACE)
 	SET(LIBS ${LIBS} ${PYTHON_LIBRARIES})
 ENDIF(PYTHONLIBS_FOUND)
 
