--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,7 +20,7 @@ IF(BLITZ_FOUND AND LINALG_FOUND AND IGRAPH_FOUND AND Boost_FOUND AND PYTHONLIBS_
 	ADD_LIBRARY           (mechsys SHARED mechsys.cpp)
 	TARGET_LINK_LIBRARIES (mechsys ${LIBS} "boost_python")
 	IF(APPLE)
-		INSTALL (FILES libmechsys.dylib DESTINATION ${PYTHON_SITE_PACKAGES} RENAME mechsys.dylib)
+		INSTALL (FILES libmechsys.dylib DESTINATION ${PYTHON_SITE_PACKAGES} RENAME mechsys.so)
 	ELSE(APPLE)
 		IF(WIN32)
 			INSTALL (FILES libmechsys.dll DESTINATION ${PYTHON_SITE_PACKAGES} RENAME mechsys.dll)
