--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,8 @@ Source: mechsys
 Section: science
 Priority: optional
 Maintainer: Dorival Pedroso <dorival.pedroso@gmail.com>
-Build-Depends: debhelper, python2.5 (>= 2.5), libboost-python-dev, libsuitesparse-dev
-Standards-Version: 3.7.2
+Build-Depends: debhelper (>= 6.0), python-central (>= 0.6), python2.5 (>= 2.5), libblitz0-dev, libboost-python-dev, libsuitesparse-dev, libigraph-dev
+Standards-Version: 3.7.3
 XS-Python-Version: >= 2.5
 
 Package: mechsys
@@ -12,7 +12,7 @@ Depends: ${python:Depends}, ${shlibs:Depends}
 Provides: ${python:Provides}
 XB-Python-Version: ${python:Versions}
 Description: Open Library for Mechanics
- Open Library for Mechanics
- Includes a 3D FEM program with CAD and mesh generation via Blender
+ Open Library for Mechanics.
+ Includes a 3D FEM program with CAD and mesh generation via Blender.
  .
-  Homepage: http://mechsys.nongnu.org
+ Homepage: http://mechsys.nongnu.org
