--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,8 @@ Source: mechsys
 Section: science
 Priority: optional
 Maintainer: Dorival Pedroso <dorival.pedroso@gmail.com>
-Build-Depends: debhelper (>= 6.0), python-central (>= 0.6), python2.5 (>= 2.5), libblitz0-dev, libboost-python-dev, libsuitesparse-dev, libigraph-dev
+Build-Depends: debhelper (>= 6.0), python-central (>= 0.6), python2.5 (>= 2.5), libblitz0-dev, \
+ libboost-python-dev, libsuitesparse-dev, libigraph-dev
 Standards-Version: 3.7.3
 XS-Python-Version: >= 2.5
 
@@ -12,7 +13,20 @@ Depends: ${python:Depends}, ${shlibs:Depends}
 Provides: ${python:Provides}
 XB-Python-Version: ${python:Versions}
 Description: Open Library for Mechanics
- Open Library for Mechanics.
- Includes a 3D FEM program with CAD and mesh generation via Blender.
+ MechSys is a comprehensive library (through C++ or Python) to the
+ implementation of software related to Mechanical Systems. It includes
+ a framework for linear algebra, tensorial calculus, mesh generation,
+ and numerical algorithms.
+ .
+ MechSys also includes the following programs:
+ -- FEM (Finite Element Method) to the solution of 2D and 3D problems,
+ such as water flow, heat transfer, equilibrium (quasi-static), or
+ hydro-mechanical coupling
+ -- MPM (Material Point Method) to the solution of dynamic equilibrium
+ problems
+ .
+ MechSys/FEM and MechSys/MPM programs run inside a very friendly
+ graphical interface (GUI) based on Blender, where CAD, mesh
+ generation, simulations, and visualisation co-exist.
  .
  Homepage: http://mechsys.nongnu.org
