Debian package generation is working (vesioning does not work for update manager in Ubuntu)

--- a/debian/rules
+++ b/debian/rules
@@ -19,6 +19,8 @@ build-python%:
 	touch $@
 
 install: build $(PYVERS:%=install-python%)
+	test -d $(CURDIR)/debian/mechsys/usr/share/blender/scripts/ || mkdir -p $(CURDIR)/debian/mechsys/usr/share/blender/scripts/
+	cp lib/blender/*.py $(CURDIR)/debian/mechsys/usr/share/blender/scripts/
 
 install-python%:
 	python$* setup.py install --root $(CURDIR)/debian/mechsys/
