--- a/debian/control
+++ b/debian/control
@@ -9,8 +9,8 @@ XS-Python-Version: >= 2.5
 
 Package: mechsys
 Architecture: any
-Depends: ${python:Depends}, ${shlibs:Depends}, libboost-python-dev, libsuitesparse-dev, libigraph-dev
-Recommends: blender, paraview
+Depends: ${python:Depends}, ${shlibs:Depends}, blender, libboost-python-dev, libsuitesparse-dev, libigraph-dev
+Recommends: paraview
 Provides: ${python:Provides}
 XB-Python-Version: ${python:Versions}
 Description: Open Library for Mechanics
