--- a/tst/reddy/CMakeLists.txt
+++ b/tst/reddy/CMakeLists.txt
@@ -23,4 +23,9 @@ IF(BLITZ_FOUND AND LINALG_FOUND)
 	TARGET_LINK_LIBRARIES (tex831   ${LIBS})
 	SET_TARGET_PROPERTIES (tex831   PROPERTIES COMPILE_FLAGS "${FLAGS}")
 
+	ADD_EXECUTABLE        (tex851   tex851.cpp)
+	ADD_TEST              (tex851   tex851)
+	TARGET_LINK_LIBRARIES (tex851   ${LIBS})
+	SET_TARGET_PROPERTIES (tex851   PROPERTIES COMPILE_FLAGS "${FLAGS}")
+
 ENDIF(BLITZ_FOUND AND LINALG_FOUND)
