Test: tpoisson01 added

--- a/tst/CMakeLists.txt
+++ b/tst/CMakeLists.txt
@@ -78,6 +78,11 @@ IF(BLITZ_FOUND AND LINALG_FOUND)
 	TARGET_LINK_LIBRARIES (tmesh03    ${LIBS})
 	SET_TARGET_PROPERTIES (tmesh03    PROPERTIES COMPILE_FLAGS "${FLAGS}")
 
+	ADD_EXECUTABLE        (tpoisson01 tpoisson01.cpp)
+	ADD_TEST              (tpoisson01 tpoisson01)
+	TARGET_LINK_LIBRARIES (tpoisson01 ${LIBS})
+	SET_TARGET_PROPERTIES (tpoisson01 PROPERTIES COMPILE_FLAGS "${FLAGS}")
+
 ENDIF(BLITZ_FOUND AND LINALG_FOUND)
 
 IF(IGRAPH_FOUND)
