--- a/tst/CMakeLists.txt
+++ b/tst/CMakeLists.txt
@@ -83,6 +83,11 @@ IF(BLITZ_FOUND AND LINALG_FOUND)
 	TARGET_LINK_LIBRARIES (tpoisson01 ${LIBS})
 	SET_TARGET_PROPERTIES (tpoisson01 PROPERTIES COMPILE_FLAGS "${FLAGS}")
 
+	ADD_EXECUTABLE        (tlaplace01 tlaplace01.cpp)
+	ADD_TEST              (tlaplace01 tlaplace01)
+	TARGET_LINK_LIBRARIES (tlaplace01 ${LIBS})
+	SET_TARGET_PROPERTIES (tlaplace01 PROPERTIES COMPILE_FLAGS "${FLAGS}")
+
 ENDIF(BLITZ_FOUND AND LINALG_FOUND)
 
 IF(IGRAPH_FOUND)
