UMFPACK is now default

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,6 +19,7 @@
 IF(BLITZ_FOUND AND LINALG_FOUND AND IGRAPH_FOUND AND Boost_FOUND AND PYTHONLIBS_FOUND)
 	ADD_LIBRARY           (mechsys SHARED mechsys.cpp)
 	TARGET_LINK_LIBRARIES (mechsys ${LIBS} "boost_python")
+	SET_TARGET_PROPERTIES (mechsys PROPERTIES COMPILE_FLAGS "${FLAGS}")
 	IF(APPLE)
 		INSTALL (FILES libmechsys.dylib DESTINATION ${PYTHON_SITE_PACKAGES} RENAME mechsys.so)
 	ELSE(APPLE)
