Check methods added/improved. Trying to catch segfaults

--- a/tst/CMakeLists.txt
+++ b/tst/CMakeLists.txt
@@ -88,6 +88,11 @@ IF(BLITZ_FOUND AND LINALG_FOUND)
 	TARGET_LINK_LIBRARIES (tlaplace01 ${LIBS})
 	SET_TARGET_PROPERTIES (tlaplace01 PROPERTIES COMPILE_FLAGS "${FLAGS}")
 
+	ADD_EXECUTABLE        (tsegfaults tsegfaults.cpp)
+	ADD_TEST              (tsegfaults tsegfaults)
+	TARGET_LINK_LIBRARIES (tsegfaults ${LIBS})
+	SET_TARGET_PROPERTIES (tsegfaults PROPERTIES COMPILE_FLAGS "${FLAGS}")
+
 ENDIF(BLITZ_FOUND AND LINALG_FOUND)
 
 IF(IGRAPH_FOUND)
