--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,7 @@ INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindSUPERLU.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindSUPERLUD.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindMPICXX.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindIGRAPH.cmake)
+INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindCGAL.cmake)
 
 SET(FLAGS "-DDO_DEBUG")
 SET(LIBS  "jrs_triangle")
@@ -109,3 +110,7 @@ ENDIF(SUPERLUD_FOUND)
 IF(IGRAPH_FOUND)
 	SET(LIBS  ${LIBS}  ${IGRAPH_LIBRARIES})
 ENDIF(IGRAPH_FOUND)
+
+IF(CGAL_FOUND)
+	SET(LIBS  ${LIBS}  ${CGAL_LIBRARIES})
+ENDIF(CGAL_FOUND)
