Compilation flags related to CGAL (Mesh::AlphaShape) corrected

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,5 +112,12 @@ IF(IGRAPH_FOUND)
 ENDIF(IGRAPH_FOUND)
 
 IF(CGAL_FOUND)
-	SET(LIBS  ${LIBS}  ${CGAL_LIBRARIES})
+	IF(GOTOBLAS_FOUND)
+		SET(LIBS  ${LIBS}  ${CGAL_LIBRARIES})
+	ELSE(GOTOBLAS_FOUND)
+		ENABLE_LANGUAGE(Fortran)
+		INCLUDE(FindBLAS)
+		SET(LIBS  ${LIBS}  ${CGAL_LIBRARIES})
+		SET(LIBS  ${LIBS}  "gfortran")
+	ENDIF(GOTOBLAS_FOUND)
 ENDIF(CGAL_FOUND)
