--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,7 +16,7 @@
 # along with this program. If not, see <http://www.gnu.org/licenses/>  #
 ########################################################################
 
-IF(BLITZ_FOUND AND LINALG_FOUND AND IGRAPH_FOUND AND Boost_FOUND AND PYTHONLIBS_FOUND)
+IF(BLITZ_FOUND AND LINALG_FOUND AND IGRAPH_FOUND AND Boost_FOUND AND PYTHONLIBS_FOUND AND CGAL_FOUND)
 	ADD_LIBRARY           (mechsys SHARED mechsys.cpp)
 	TARGET_LINK_LIBRARIES (mechsys ${LIBS} "boost_python")
 	SET_TARGET_PROPERTIES (mechsys PROPERTIES COMPILE_FLAGS "${FLAGS}")
@@ -29,4 +29,4 @@ IF(BLITZ_FOUND AND LINALG_FOUND AND IGRAPH_FOUND AND Boost_FOUND AND PYTHONLIBS_
 			INSTALL (FILES libmechsys.so DESTINATION ${PYTHON_SITE_PACKAGES} RENAME mechsys.so)
 		ENDIF(WIN32)
 	ENDIF(APPLE)
-ENDIF(BLITZ_FOUND AND LINALG_FOUND AND IGRAPH_FOUND AND Boost_FOUND AND PYTHONLIBS_FOUND)
+ENDIF(BLITZ_FOUND AND LINALG_FOUND AND IGRAPH_FOUND AND Boost_FOUND AND PYTHONLIBS_FOUND AND CGAL_FOUND)
