Profiling option added to CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,10 @@ ENABLE_TESTING         ()
 OPTION(MAKE_VERBOSE       "Show additional messages during compilation/link?" OFF)
 OPTION(MAKE_ALL_WARNINGS  "Make with all warnings (-Wall)"                    ON )
 OPTION(MAKE_DEBUG_SYMBOLS "Make with debug symbols (-g3)"                     ON )
+OPTION(MAKE_PROFILING     "Make with profiling information (-pg)"             OFF)
 OPTION(MAKE_OPTIMIZED     "Make optimized (-O3)"                              OFF)
+
+#SET(CMAKE_CXX_COMPILER /opt/intel/cc/10.1.018/bin/icpc)
 
 IF(MAKE_VERBOSE)
 	SET(CMAKE_VERBOSE_MAKEFILE TRUE)
@@ -37,6 +40,10 @@ ENDIF(MAKE_ALL_WARNINGS)
 IF(MAKE_DEBUG_SYMBOLS)
 	ADD_DEFINITIONS(-g3)
 ENDIF(MAKE_DEBUG_SYMBOLS)
+
+IF(MAKE_PROFILING)
+	SET(CMAKE_CXX_FLAGS -pg)
+ENDIF(MAKE_PROFILING)
 
 IF(MAKE_OPTIMIZED)
 	ADD_DEFINITIONS(-O3)
