--- a/debian/control
+++ b/debian/control
@@ -3,13 +3,13 @@ Section: science
 Priority: optional
 Maintainer: Dorival Pedroso <dorival.pedroso@gmail.com>
 Build-Depends: debhelper (>= 6.0), python-central (>= 0.6), python2.5 (>= 2.5), libblitz0-dev, \
- libboost-python-dev, libsuitesparse-dev, libigraph-dev
-Standards-Version: 3.7.3
+ libboost-python-dev, libsuitesparse-dev, libigraph-dev, gfortran, libcgal-dev
+Standards-Version: 3.8.0
 XS-Python-Version: >= 2.5
 
 Package: mechsys
 Architecture: any
-Depends: ${python:Depends}, ${shlibs:Depends}, blender, libboost-python-dev, libsuitesparse-dev, libigraph-dev
+Depends: ${python:Depends}, ${shlibs:Depends}, blender, libboost-python-dev, libsuitesparse-dev, libigraph-dev, gfortran, libcgal-dev, libblitz0-dev
 Recommends: paraview
 XB-Python-Version: ${python:Versions}
 Description: Open Library for Mechanics
