FEM::Beam added: not working yet

--- a/tst/CMakeLists.txt
+++ b/tst/CMakeLists.txt
@@ -23,6 +23,11 @@ IF(BLITZ_FOUND AND LINALG_FOUND)
 	TARGET_LINK_LIBRARIES (tcamclay01   ${LIBS})
 	SET_TARGET_PROPERTIES (tcamclay01   PROPERTIES COMPILE_FLAGS "${FLAGS}")
 
+	ADD_EXECUTABLE        (tbeam01   tbeam01.cpp)
+	ADD_TEST              (tbeam01   tbeam01)
+	TARGET_LINK_LIBRARIES (tbeam01   ${LIBS})
+	SET_TARGET_PROPERTIES (tbeam01   PROPERTIES COMPILE_FLAGS "${FLAGS}")
+
 	ADD_EXECUTABLE        (ttruss01   ttruss01.cpp)
 	ADD_TEST              (ttruss01   ttruss01)
 	TARGET_LINK_LIBRARIES (ttruss01   ${LIBS})
