--- a/debian/control
+++ b/debian/control
@@ -9,8 +9,7 @@ XS-Python-Version: >= 2.5
 
 Package: mechsys
 Architecture: any
-Depends: ${python:Depends}, ${shlibs:Depends}, blender, libboost-python-dev, libsuitesparse-dev, libigraph-dev, gfortran, libcgal-dev, libblitz0-dev
-Recommends: paraview
+Depends: ${python:Depends}, ${shlibs:Depends}, blender, paraview, libboost-python-dev, libsuitesparse-dev, libigraph-dev, gfortran, libcgal-dev, libblitz0-dev
 XB-Python-Version: ${python:Versions}
 Description: Open Library for Mechanics
  MechSys is a comprehensive library (through C++ or Python) to the
