--- a/tst/midasgts/CMakeLists.txt
+++ b/tst/midasgts/CMakeLists.txt
@@ -23,4 +23,9 @@ IF(BLITZ_FOUND AND LINALG_FOUND)
 	TARGET_LINK_LIBRARIES (tstatic121 ${LIBS})
 	SET_TARGET_PROPERTIES (tstatic121 PROPERTIES COMPILE_FLAGS "${FLAGS}")
 
+	ADD_EXECUTABLE        (texam5 texam5.cpp)
+	ADD_TEST              (texam5 texam5)
+	TARGET_LINK_LIBRARIES (texam5 ${LIBS})
+	SET_TARGET_PROPERTIES (texam5 PROPERTIES COMPILE_FLAGS "${FLAGS}")
+
 ENDIF(BLITZ_FOUND AND LINALG_FOUND)
