Solid Mechanics sign convention adopted. Lin2 removed. Laexpr improved a little bit.
- MechSys now uses Solid Mechanics convetion for stress and strains: compression is NEGATIVE
- Lin2 removed
- Diffusion element corrected according to new _n_int_pts
- LinElastic model should be used only for 2D or 3D elements from now on
- scalei removed: LAPACK is now being used for generic matrix inversions
- midasgts: example # 1 added (not working)

--- a/.hgignore
+++ b/.hgignore
@@ -20,6 +20,7 @@ tst/tpoisson01
 tst/tlaplace01
 tst/tsegfaults
 tst/talphashape01
+tst/midasgts/texam1
 tst/midasgts/texam5
 tst/midasgts/tstatic121
 src/libmechsys.*
