--- a/tst/midasgts/CMakeLists.txt
+++ b/tst/midasgts/CMakeLists.txt
@@ -23,6 +23,11 @@ IF(BLITZ_FOUND AND LINALG_FOUND)
 	TARGET_LINK_LIBRARIES (tstatic121 ${LIBS})
 	SET_TARGET_PROPERTIES (tstatic121 PROPERTIES COMPILE_FLAGS "${FLAGS}")
 
+	ADD_EXECUTABLE        (texam1 texam1.cpp)
+	ADD_TEST              (texam1 texam1)
+	TARGET_LINK_LIBRARIES (texam1 ${LIBS})
+	SET_TARGET_PROPERTIES (texam1 PROPERTIES COMPILE_FLAGS "${FLAGS}")
+
 	ADD_EXECUTABLE        (texam5 texam5.cpp)
 	ADD_TEST              (texam5 texam5)
 	TARGET_LINK_LIBRARIES (texam5 ${LIBS})
