Normal pressure boundary condition tested

--- a/.hgignore
+++ b/.hgignore
@@ -11,6 +11,8 @@ tst/tsolid01
 tst/tsolid02
 tst/tpstrain01
 tst/tpstrain02
+tst/tpstrain03
+tst/tpstrain04
 tst/theat01
 tst/ttree01
 tst/reddy/tex541
