--- a/tst/CMakeLists.txt
+++ b/tst/CMakeLists.txt
@@ -73,6 +73,16 @@ IF(BLITZ_FOUND AND LINALG_FOUND)
 	TARGET_LINK_LIBRARIES (tpstrain02 ${LIBS})
 	SET_TARGET_PROPERTIES (tpstrain02 PROPERTIES COMPILE_FLAGS "${FLAGS}")
 
+	ADD_EXECUTABLE        (tpstrain03 tpstrain02.cpp)
+	ADD_TEST              (tpstrain03 tpstrain02)
+	TARGET_LINK_LIBRARIES (tpstrain03 ${LIBS})
+	SET_TARGET_PROPERTIES (tpstrain03 PROPERTIES COMPILE_FLAGS "${FLAGS}")
+
+	ADD_EXECUTABLE        (tpstrain04 tpstrain02.cpp)
+	ADD_TEST              (tpstrain04 tpstrain02)
+	TARGET_LINK_LIBRARIES (tpstrain04 ${LIBS})
+	SET_TARGET_PROPERTIES (tpstrain04 PROPERTIES COMPILE_FLAGS "${FLAGS}")
+
 	ADD_EXECUTABLE        (tsolid01   tsolid01.cpp)
 	ADD_TEST              (tsolid01   tsolid01)
 	TARGET_LINK_LIBRARIES (tsolid01   ${LIBS})
