3D test for embedded elements added. 2D test for embedded elements renamed and improved.

--- a/tst/CMakeLists.txt
+++ b/tst/CMakeLists.txt
@@ -17,10 +17,15 @@
 ########################################################################
 
 IF(BLITZ_FOUND AND LINALG_FOUND)
-	ADD_EXECUTABLE        (tembbed01   tembbed01.cpp)
-	ADD_TEST              (tembbed01   tembbed01)
-	TARGET_LINK_LIBRARIES (tembbed01   ${LIBS})
-	SET_TARGET_PROPERTIES (tembbed01   PROPERTIES COMPILE_FLAGS "${FLAGS}")
+	ADD_EXECUTABLE        (tembed01   tembed01.cpp)
+	ADD_TEST              (tembed01   tembed01)
+	TARGET_LINK_LIBRARIES (tembed01   ${LIBS})
+	SET_TARGET_PROPERTIES (tembed01   PROPERTIES COMPILE_FLAGS "${FLAGS}")
+
+	ADD_EXECUTABLE        (tembed02   tembed02.cpp)
+	ADD_TEST              (tembed02   tembed02)
+	TARGET_LINK_LIBRARIES (tembed02   ${LIBS})
+	SET_TARGET_PROPERTIES (tembed02   PROPERTIES COMPILE_FLAGS "${FLAGS}")
 
 	ADD_EXECUTABLE        (tbiot01   tbiot01.cpp)
 	ADD_TEST              (tbiot01   tbiot01)
