--- a/tst/midasgts/CMakeLists.txt
+++ b/tst/midasgts/CMakeLists.txt
@@ -23,6 +23,11 @@ IF(BLITZ_FOUND AND LINALG_FOUND)
 	TARGET_LINK_LIBRARIES (tstatic121 ${LIBS})
 	SET_TARGET_PROPERTIES (tstatic121 PROPERTIES COMPILE_FLAGS "${FLAGS}")
 
+	ADD_EXECUTABLE        (tstatic122 tstatic122.cpp)
+	ADD_TEST              (tstatic122 tstatic122)
+	TARGET_LINK_LIBRARIES (tstatic122 ${LIBS})
+	SET_TARGET_PROPERTIES (tstatic122 PROPERTIES COMPILE_FLAGS "${FLAGS}")
+
 	ADD_EXECUTABLE        (texam1 texam1.cpp)
 	ADD_TEST              (texam1 texam1)
 	TARGET_LINK_LIBRARIES (texam1 ${LIBS})
