--- a/.hgignore
+++ b/.hgignore
@@ -20,9 +20,9 @@ tst/tsolid01
 tst/tsolid02
 tst/tpstrain01
 tst/tpstrain02
-tst/tpstrain03
-tst/tpstrain04
-tst/tpstrain05
+tst/tqnorm2d
+tst/tqnorm3d
+tst/tcylin01
 tst/theat01
 tst/ttree01
 tst/reddy/tex831
