--- a/tst/CMakeLists.txt
+++ b/tst/CMakeLists.txt
@@ -17,11 +17,6 @@
 ########################################################################
 
 IF(BLITZ_FOUND AND LINALG_FOUND)
-	ADD_EXECUTABLE        (tspring01   tspring01.cpp)
-	ADD_TEST              (tspring01   tspring01)
-	TARGET_LINK_LIBRARIES (tspring01   ${LIBS})
-	SET_TARGET_PROPERTIES (tspring01   PROPERTIES COMPILE_FLAGS "${FLAGS}")
-
 	ADD_EXECUTABLE        (tbiot01   tbiot01.cpp)
 	ADD_TEST              (tbiot01   tbiot01)
 	TARGET_LINK_LIBRARIES (tbiot01   ${LIBS})
@@ -72,6 +67,11 @@ IF(BLITZ_FOUND AND LINALG_FOUND)
 	TARGET_LINK_LIBRARIES (tbeam02   ${LIBS})
 	SET_TARGET_PROPERTIES (tbeam02   PROPERTIES COMPILE_FLAGS "${FLAGS}")
 
+	ADD_EXECUTABLE        (tspring01   tspring01.cpp)
+	ADD_TEST              (tspring01   tspring01)
+	TARGET_LINK_LIBRARIES (tspring01   ${LIBS})
+	SET_TARGET_PROPERTIES (tspring01   PROPERTIES COMPILE_FLAGS "${FLAGS}")
+
 	ADD_EXECUTABLE        (ttruss01   ttruss01.cpp)
 	ADD_TEST              (ttruss01   ttruss01)
 	TARGET_LINK_LIBRARIES (ttruss01   ${LIBS})
@@ -102,30 +102,25 @@ IF(BLITZ_FOUND AND LINALG_FOUND)
 	TARGET_LINK_LIBRARIES (tpstrain02 ${LIBS})
 	SET_TARGET_PROPERTIES (tpstrain02 PROPERTIES COMPILE_FLAGS "${FLAGS}")
 
-	ADD_EXECUTABLE        (tpstrain03 tpstrain03.cpp)
-	ADD_TEST              (tpstrain03 tpstrain03)
-	TARGET_LINK_LIBRARIES (tpstrain03 ${LIBS})
-	SET_TARGET_PROPERTIES (tpstrain03 PROPERTIES COMPILE_FLAGS "${FLAGS}")
+	ADD_EXECUTABLE        (tqnorm2d tqnorm2d.cpp)
+	ADD_TEST              (tqnorm2d tqnorm2d)
+	TARGET_LINK_LIBRARIES (tqnorm2d ${LIBS})
+	SET_TARGET_PROPERTIES (tqnorm2d PROPERTIES COMPILE_FLAGS "${FLAGS}")
 
-	ADD_EXECUTABLE        (tpstrain04 tpstrain04.cpp)
-	ADD_TEST              (tpstrain04 tpstrain04)
-	TARGET_LINK_LIBRARIES (tpstrain04 ${LIBS})
-	SET_TARGET_PROPERTIES (tpstrain04 PROPERTIES COMPILE_FLAGS "${FLAGS}")
+	ADD_EXECUTABLE        (tqnorm3d tqnorm3d.cpp)
+	ADD_TEST              (tqnorm3d tqnorm3d)
+	TARGET_LINK_LIBRARIES (tqnorm3d ${LIBS})
+	SET_TARGET_PROPERTIES (tqnorm3d PROPERTIES COMPILE_FLAGS "${FLAGS}")
 
-	ADD_EXECUTABLE        (tpstrain05 tpstrain05.cpp)
-	ADD_TEST              (tpstrain05 tpstrain05)
-	TARGET_LINK_LIBRARIES (tpstrain05 ${LIBS})
-	SET_TARGET_PROPERTIES (tpstrain05 PROPERTIES COMPILE_FLAGS "${FLAGS}")
+	ADD_EXECUTABLE        (tcylin01 tcylin01.cpp)
+	ADD_TEST              (tcylin01 tcylin01)
+	TARGET_LINK_LIBRARIES (tcylin01 ${LIBS})
+	SET_TARGET_PROPERTIES (tcylin01 PROPERTIES COMPILE_FLAGS "${FLAGS}")
 
 	ADD_EXECUTABLE        (tsolid01   tsolid01.cpp)
 	ADD_TEST              (tsolid01   tsolid01)
 	TARGET_LINK_LIBRARIES (tsolid01   ${LIBS})
 	SET_TARGET_PROPERTIES (tsolid01   PROPERTIES COMPILE_FLAGS "${FLAGS}")
-
-	ADD_EXECUTABLE        (tsolid02   tsolid02.cpp)
-	ADD_TEST              (tsolid02   tsolid02)
-	TARGET_LINK_LIBRARIES (tsolid02   ${LIBS})
-	SET_TARGET_PROPERTIES (tsolid02   PROPERTIES COMPILE_FLAGS "${FLAGS}")
 
 	ADD_EXECUTABLE        (tpoisson01 tpoisson01.cpp)
 	ADD_TEST              (tpoisson01 tpoisson01)
