tunnel.h added (not working yet)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,9 +68,11 @@ INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindSUPERLUD.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindMPICXX.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindIGRAPH.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindCGAL.cmake)
+INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindFLTK.cmake)
 
 SET(FLAGS "-DDO_DEBUG")
 SET(LIBS  "jrs_triangle")
+SET(LFLAGS "")
 
 IF(PYTHONLIBS_FOUND)
 	INCLUDE_DIRECTORIES   (${PYTHON_INCLUDE_PATH})
@@ -128,3 +130,8 @@ IF(CGAL_FOUND)
 		SET(LIBS  ${LIBS}  "gfortran")
 	ENDIF(GOTOBLAS_FOUND)
 ENDIF(CGAL_FOUND)
+
+IF(FLTK_FOUND)
+	SET(FLAGS "${FLAGS} ${FLTK_CFLAGS}")
+	SET(LFLAGS "${LFLAGS} ${FLTK_LFLAGS}")
+ENDIF(FLTK_FOUND)
