Problem with memory copy solved (bug or compiler limitation?) => Data::SetElemAndModel was pushing a copy of Prop_t based on a local instance. Now memory is explicitely allocated (solving the problem, which is difficult to catch with most tests -- excepts perhaps with those with many properties (IDs))

--- a/tst/CMakeLists.txt
+++ b/tst/CMakeLists.txt
@@ -17,10 +17,12 @@
 ########################################################################
 
 IF(BLITZ_FOUND AND LINALG_FOUND)
-	ADD_EXECUTABLE        (ttunnel   ttunnel.cpp)
-	ADD_TEST              (ttunnel   ttunnel)
-	TARGET_LINK_LIBRARIES (ttunnel   ${LIBS})
-	SET_TARGET_PROPERTIES (ttunnel   PROPERTIES COMPILE_FLAGS "${FLAGS}" LINK_FLAGS "${LFLAGS}")
+	IF(FLTK_FOUND)
+		ADD_EXECUTABLE        (ttunnel   ttunnel.cpp)
+		ADD_TEST              (ttunnel   ttunnel)
+		TARGET_LINK_LIBRARIES (ttunnel   ${LIBS})
+		SET_TARGET_PROPERTIES (ttunnel   PROPERTIES COMPILE_FLAGS "${FLAGS}" LINK_FLAGS "${LFLAGS}")
+	ENDIF(FLTK_FOUND)
 
 	ADD_EXECUTABLE        (tbiot01   tbiot01.cpp)
 	ADD_TEST              (tbiot01   tbiot01)
