Just added Raul's LBM code

--- a/.hgignore
+++ b/.hgignore
@@ -38,6 +38,7 @@ tst/midasgts/texam5
 tst/midasgts/tstatic121
 tst/midasgts/tstatic122
 src/libmechsys.*
+tlbm/cylinder/cylinder
 
 syntax: glob
 CTestTestfile.cmake
