--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,7 +53,7 @@ ADD_DEFINITIONS(-fmessage-length=0) # Each error message will appear on a single
 
 INCLUDE_DIRECTORIES(${MECHSYS_SOURCE_DIR}/lib/)
 
-SUBDIRS (lib tst src)
+SUBDIRS (lib tlbm tst src)
 
 # Dependencies
 SET(Boost_USE_STATIC_LIBS ON)
