LBM body force added. Needs test

--- a/tlbm/CMakeLists.txt
+++ b/tlbm/CMakeLists.txt
@@ -17,3 +17,4 @@
 ########################################################################
 
 ADD_EXECUTABLE        (cylinder   cylinder.cpp)
+ADD_EXECUTABLE        (gravity    gravity.cpp)
