--- a/tlbm/CMakeLists.txt
+++ b/tlbm/CMakeLists.txt
@@ -19,4 +19,5 @@
 ADD_EXECUTABLE        (cylinder   cylinder.cpp)
 ADD_EXECUTABLE        (gravity    gravity.cpp)
 ADD_EXECUTABLE        (drop       drop.cpp)
+ADD_EXECUTABLE        (capi       capi.cpp)
 ADD_EXECUTABLE        (bubble     bubble.cpp)
